[package]
name = "george_mac_twitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = {version = "1", features = ["full"]}
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = {version = "4", features = ["derive"]}
twitter-v2 = "0.1.8"
oauth2 = "4.4.2"
